--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,13 @@
 			</distributionManagement>
 		</profile>
 
+		<profile>
+			<id>doclint-java8-disable</id>
+			<activation>
+				<jdk>[1.8,)</jdk>
+			</activation>
+		</profile>
+
 	</profiles>
 
 
@@ -141,6 +148,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.9.1</version>
+				<configuration>
+					<additionalparam>-Xdoclint:none</additionalparam>
+				</configuration>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
