--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,20 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.9</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.13</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<!-- deploy to remote (uploader password stored in settings.xml) -->
