--- a/pom.xml
+++ b/pom.xml
@@ -49,14 +49,13 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.9</version>
+			<version>1.7.24</version>
 			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.13</version>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.24</version>
 			<scope>test</scope>
 		</dependency>
 
